# python-compiler

./: .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/implementors/alloc/string/: trait.ToString.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/python/: all.html  index.html  sidebar-items.js
docs/python/ast/: enum.Instruction.html  enum.VarType.html  fn.parse_str.html  index.html  sidebar-items.js  struct.Program.html  type.Tree.html
docs/python/codegen/: index.html  sidebar-items.js
docs/python/codegen/buffer/: index.html  sidebar-items.js  struct.Buffer.html
docs/python/codegen/generator/: index.html  sidebar-items.js  struct.CTarget.html  trait.Generator.html
docs/python_macros/: all.html  index.html
docs/src/python/: ast.rs.html  lib.rs.html
docs/src/python/codegen/: buffer.rs.html  generator.rs.html  mod.rs.html
docs/src/python_macros/: lib.rs.html
python/: Cargo.toml
python-macros/: Cargo.toml
python/src/: ast.rs  bin.rs  lib.rs
python/src/codegen/: buffer.rs  codegen.rs  generator.rs  mod.rs
runtime/: ugc.h
test/: test.py
(+2 files in other folders)
